added change setting functionality
